# Test-Gen

./: .gitignore  README.md  main.py  pyproject.toml
data/: dataset.csv
notebooks/: gemma_lora_training.ipynb  teacher.ipynb
src/ai_teacher/: utils.py
src/ai_teacher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
