[project]
name = "ai-teacher"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "crewai==0.121.1",
    "crewai-tools==0.45.0",
    "langchain-community",
    "langchain-groq",
    "langchain-openai",
    "langchain-huggingface",
    "langchain-google-genai",
    "langchain-text-splitters",
    "sentence-transformers",
    "pypdf",
    "duckduckgo-search",
    "peft",
    "wikipedia",
    "litellm",
    "transformers",
    "torch",
    "trl",
    "accelerate",
    "bitsandbytes",
    "datasets",
    "sentencepiece",
    "faiss-cpu",
    "tqdm",
]